src/test/ui/generic-associated-types/issue-47206-where-clause.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/issue-47206-where-clause.rs:13:5
   |
LL |     type Assoc3<T>;
   |     --------------- definition of `Assoc3` from trait
...
LL |     type Assoc3<T> where T: Iterator = Vec<T>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `T: std::iter::Iterator`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0276`.
